--- a/src/screens/styles/Screens.css
+++ b/src/screens/styles/Screens.css
@@ -488,33 +488,6 @@
     min-height: 0;
 }
 
-.console-entry {
-    padding: 0.25rem;
-    border-radius: 2px;
-    margin-bottom: 0.25rem;
-    white-space: pre-line;
-}
-
-.console-entry.info {
-    color: #dcddde;
-}
-
-.console-entry.success {
-    color: #43b581;
-}
-
-.console-entry.warning {
-    color: #faa61a;
-}
-
-.console-entry.error {
-    color: #f04747;
-}
-
-.console-entry.delete {
-    color: #ff73fa;
-}
-
 .dms-container {
     background: #2f3136;
     border-radius: 8px;
@@ -885,6 +858,10 @@
 
 .console-entry.info {
     color: #dcddde;
+}
+
+.console-entry.delete {
+    color: #ff73fa;
 }
 
 .console-entry.success {
@@ -2509,4 +2486,8 @@ code {
     height: 100%;
     overflow-y: auto;
     padding: 20px;
+}
+.channel-type.group {
+    background-color: #7289da;
+    color: white;
 }
